--- a/wrangler.toml
+++ b/wrangler.toml
@@ -34,14 +34,15 @@ database_id = "02485f82-5c1e-44ee-8fd0-935f282deceb"
 # Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.
 # Durable Objects can live for as long as needed. Use these when you need a long-running "server", such as in realtime apps.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/durable-objects
-# [[durable_objects.bindings]]
-# name = "traffic-light-demo-do-websocket"
-# class_name = "WebSocketServer"
-# script_name = 'traffic-light-demo-do-websocket'
+[[durable_objects.bindings]]
+name = "traffic-light-demo-do-websocket"
+class_name = "TrafficLightDurableObject"
+script_name = 'traffic-light-demo-do-websocket'
 
 [[durable_objects]]
-name = "TRAFFIC_LIGHT_DO"
+name = "traffic-light-demo-do-websocket"
 class_name = "TrafficLightDurableObject"
+script_name = 'traffic-light-demo-do-websocket'
 
 [[migrations]]
 tag = "v1"
